# infotecs

./: .gitignore  README.md  REPORT.md  docker-compose.yml
client/: README.md  index.html  package-lock.json  package.json
client/src/: api.js  main.jsx  styles.css
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/data/: raw.csv
server/models/default/: autoencoder.npz  metadata.json
server/reports/: anomalies.jsonl
server/reports/demo/: demo_anomalies.csv
server/reports/demo/model/: autoencoder.npz  metadata.json
server/tests/: test_api.py  test_features.py  test_model.py  test_reporter.py
server/ueba_prototype/: __init__.py  cli.py  collector.py  demo.py  detector.py  features.py  model.py  reporter.py
server/ueba_server/: __init__.py  api.py
server/ueba_server/config/: app_config.py
server/ueba_server/controller/: detection_controller.py  job_controller.py  model_controller.py  report_controller.py  system_controller.py  telemetry_controller.py  training_controller.py
server/ueba_server/dto/: __init__.py  ueba_dto.py
server/ueba_server/service/: job_service.py  ueba_service.py
