[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ueba-prototype-server"
version = "0.1.0"
description = "FastAPI backend for a local UEBA anomaly detection prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "numpy>=1.24",
    "psutil>=5.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
ueba-prototype = "ueba_prototype.cli:main"
ueba-server = "ueba_server.api:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
